# 2026_notos_vision_auto_aimer

./: CMakeLists.txt  README.md  autostart.sh  build_jetson.sh
configs/: camera.yaml  demo.yaml
io/: simple_serial.cpp  simple_serial.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
src/: auto_aim.cpp  auto_aim_test.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  detector.cpp  solver.cpp  tracker.cpp  tracker.hpp  yolo.cpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: CMakeLists.txt
tests/: auto_aim_test.cpp
